# Drop

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Core/: CMakeLists.txt
Core/Source/Application/: Application.cpp  Application.hpp
Core/Source/EntryPoint/: EntryPoint.hpp
Core/Source/Log/: Log.cpp  Log.hpp
Sandbox/: App.cpp  App.hpp  CMakeLists.txt  CMakelists.txt  Sandbox.cpp  Sandbox.hpp
Source/: CMakeLists.txt
Source/Core/: CMakeLists.txt
Source/Core/Application/: AppConfig.hpp  Application.cpp  Application.hpp
Source/Core/EntryPoint/: EntryPoint.hpp
Source/Core/Log/: Log.cpp  Log.hpp
Source/Core/Platform/: Platform.hpp
Source/Core/Platform/Windows/: PlatformWindows.hpp
Source/Drop/: CMakeLists.txt  Drop.cpp  Drop.hpp
Source/Drop/Core/: CMakeLists.txt
Source/Drop/Core/App/: App.cpp  AppConfig.hpp
Source/Drop/Core/EntryPoint/: EntryPoint.hpp
Source/Drop/Core/Log/: Log.cpp
Source/Drop/Core/Platform/: Platform.cpp
Source/Drop/Core/Platform/Windows/: PlatformWindows.cpp
Source/Engine/: CMakeLists.txt
Source/Engine/Core/: Core.hpp
Source/Engine/Core/App/: App.cpp  App.hpp
Source/Engine/Core/Application/: Application.cpp  Application.hpp
Source/Engine/Core/EntryPoint/: EntryPoint.hpp
Source/Engine/Core/Event/: Event.hpp
Source/Engine/Core/Input/: KeyCodes.hpp
Source/Engine/Core/Log/: Log.cpp  Log.hpp
Source/Engine/Core/Platform/: Platform.cpp  Platform.hpp
Source/Engine/Core/Platform/Base/: Platform.cpp  Platform.hpp  Window.cpp  Window.hpp
Source/Engine/Core/Platform/Windows/: PlatformWindows.cpp  PlatformWindows.hpp  WindowsPlatform.cpp  WindowsPlatform.hpp  WindowsWindow.cpp  WindowsWindow.hpp
Source/Platform/: CMakeLists.txt
Tests/: CMakelists.txt
Tests/Source/: App.cpp  App.hpp
